methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:1: error: ')' expected but ';' found.
def FLowers(c:Color;d:Color){
                   ^FlowerPot:1: error: ';' expected but ')' found.
def FLowers(c:Color;d:Color){
                           ^