methods.flowerpot.FlowerPot.scala.code
def FLowers(c:Color;d:Color){
  setCouleurBrosse(c)
  baisseBrosse()
  leveBrosse()
  avance()
  setCouleurBrosse(d)
  baisseBrosse()
  leveBrosse()
  gauche()
  avance()
  setCouleurBrosse(c)
  baisseBrosse()
  leveBrosse()
  recule()
  droite()
  avance()
   baisseBrosse()
  leveBrosse()
  recule()
  droite()
  baisseBrosse()
  leveBrosse()
  recule()
  gauche()
  avance()

}


def growFlowers(){ 
 FLowers(Color.red;Color.YELLOW)
 avance()
 FLowers(Color.CYAN;Color.YELLOW)
 recule(6)
 droite()
 avance(2)
 gauche(2)
 FLowers(Color.ORANGE;Color.YELLOW)
 droite()
 avance(2)
 gauche()
 FLowers(Color.GREEN;Color.YELLOW)
 recule(6)
FLowers(Color.PINK;Color.YELLOW)
recule(3)
}
 

 
 